# git-patch-native

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/git-patch-core/: Cargo.toml
crates/git-patch-core/src/: lib.rs
crates/git-patch-ffi/: Cargo.toml
crates/git-patch-ffi/src/: lib.rs
crates/git-patch-napi/: Cargo.toml
crates/git-patch-napi/src/: lib.rs
npm/git-patch-native-darwin-arm64/: package.json
npm/git-patch-native-darwin-x64/: package.json
npm/git-patch-native-linux-arm64-gnu/: package.json
npm/git-patch-native-linux-arm64-musl/: package.json
npm/git-patch-native-linux-x64-gnu/: package.json
npm/git-patch-native-linux-x64-musl/: package.json
npm/git-patch-native-win32-arm64/: package.json
npm/git-patch-native-win32-x64/: package.json
scripts/: copy-native.mjs  generate-release-notes.mjs  platform-info.mjs  release-postcheck.mjs  smoke-pack-bun-ffi.mjs  smoke-pack-node-api.mjs  stage-platform-package.mjs  sync-package-versions.mjs
src/: index.ts  native.ts  platform.ts  types.ts
test/: e2e.mjs
