[package]
name = "git-patch-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "git_patch_ffi"
crate-type = ["cdylib"]

[dependencies]
git-patch-core = { path = "../git-patch-core" }
serde_json = "1"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
