[package]
name = "git-patch-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "git_patch_native"
crate-type = ["cdylib"]

[dependencies]
git-patch-core = { path = "../git-patch-core" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
